tests/baselines/reference/parserEqualsGreaterThanAfterFunction1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1.ts(1,10): error TS1003: Identifier expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1.ts(1,9): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserEqualsGreaterThanAfterFunction1.ts (2 errors) ====
    function =>
             ~~
!!! error TS1003: Identifier expected.
            
!!! error TS2391: Function implementation is missing or not immediately following the declaration.